tooling/nargo_cli/tests/snapshots/execution_failure/regression_8994/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     b[1].0
  │     ---- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1. src/main.nr:3:5

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     b[1].0
  │     ----
  │
  = Call stack:
    1. src/main.nr:3:5

Failed assertion
