tooling/nargo_cli/tests/snapshots/execution_failure/regression_8994/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     b[1].0
  │     ----
  │
  = Call stack:
    1. src/main.nr:3:5

Failed assertion
