tooling/nargo_cli/tests/snapshots/execution_failure/regression_8994/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 1 is out of bounds for the array of length 1
  ┌─ src/main.nr:3:5
  │
3 │     b[1].0
  │     ----
  │

Error interpreting main function
